# QPlugged-Server

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yaml  entrypoint.sh  package.json  prebuild.js  rome.json  tsconfig.json
.github/workflows/: build.yml
helper/: silk_codec-linux-arm64  silk_codec-linux-x64
server/: audio.ts  debugger.ts  env.ts  loader.ts  main.ts  server.ts  ws.d.ts
src/: escape.rs  fs_extra.rs  main.rs
