[package]
name = "qplugged-rust-server"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.48.0", features = [
    "Win32_System_Registry",
    "Win32_Foundation",
] }
directories = "5.0.1"
tokio = { version = "1.32.0", features = [
    "fs",
    "process",
    "io-util",
    "macros",
    "rt-multi-thread",
] }
async-ctrlc = "1.2.0"
async-recursion = "1.0.4"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
